syntax = "proto3";

package auth.v1;

option go_package = "auth-service/proto/auth/v1;authv1";

// AuthService provides backend-to-backend authentication services.
// Login is only available via HTTP API for frontend users.
service AuthService {
  // ValidateToken validates a JWT token and returns user information
  rpc ValidateToken(TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string user_id = 2;
  string tenant_id = 3;
  string role = 4;
}