package service

import (
	"context"
	"errors"
	"fmt"
	"log"
	"time"

	"golang.org/x/crypto/bcrypt"
	"github.com/golang-jwt/jwt/v5"
	"github.com/johnroshan2255/auth-service/internal/model"
	"github.com/johnroshan2255/auth-service/internal/repository"
)

type AuthService struct {
	repo                  repository.UserRepository
	coreNotificationClient *CoreNotificationClient
}

func NewAuthService(repo repository.UserRepository) *AuthService {
	return &AuthService{repo: repo}
}

// SetCoreNotificationClient sets the gRPC client for calling core-service notification
func (s *AuthService) SetCoreNotificationClient(client *CoreNotificationClient) {
	s.coreNotificationClient = client
}

var jwtKey []byte

func SetJWTKey(key string) {
	jwtKey = []byte(key)
}

// Login authenticates the user and returns a JWT
func (s *AuthService) Login(ctx context.Context, email, password string) (string, *model.User, error) {
	user, err := s.repo.GetByEmail(ctx, email)
	if err != nil {
		return "", nil, fmt.Errorf("invalid credentials: %w", err)
	}

	if err := bcrypt.CompareHashAndPassword([]byte(user.PasswordHash), []byte(password)); err != nil {
		return "", nil, errors.New("invalid credentials")
	}

	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
		"user_uuid":   user.UUID,
		"tenant_id": user.TenantID,
		"role":      user.Role,
		"exp":       time.Now().Add(time.Hour * 24).Unix(),
	})

	tokenString, err := token.SignedString(jwtKey)
	if err != nil {
		return "", nil, err
	}

	return tokenString, user, nil
}

// ValidateToken parses JWT and returns user info
func (s *AuthService) ValidateToken(tokenStr string) (bool, *model.User) {
	token, err := jwt.Parse(tokenStr, func(token *jwt.Token) (interface{}, error) {
		return jwtKey, nil
	})

	if err != nil || !token.Valid {
		return false, nil
	}

	claims, ok := token.Claims.(jwt.MapClaims)
	if !ok {
		return false, nil
	}

	// Support both user_uuid (new) and user_id (old) for backward compatibility
	userUUID, ok := claims["user_uuid"].(string)
	if !ok {
		userUUID, ok = claims["user_id"].(string)
		if !ok {
			return false, nil
		}
	}

	tenantID, _ := claims["tenant_id"].(string)
	role, _ := claims["role"].(string)

	return true, &model.User{
		UUID:     userUUID,
		TenantID: tenantID,
		Role:     role,
	}
}

// Signup creates a new user account
func (s *AuthService) Signup(ctx context.Context, email, username, password, phoneNumber, firstName, lastName string) (string, *model.User, error) {
	// Hash password
	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
	if err != nil {
		return "", nil, errors.New("failed to hash password")
	}

	// Create user (ID will be generated by database)
	// Uniqueness checks are handled within the transaction in CreateUser
	user := &model.User{
		Email:        email,
		Username:     username,
		PasswordHash: string(hashedPassword),
		PhoneNumber:   phoneNumber,
		FirstName:    firstName,
		LastName:     lastName,
		TenantID:     "", // Set default tenant or generate one
		Role:         "user", // Default role
	}

	err = s.repo.CreateUser(ctx, user)
	if err != nil {
		return "", nil, err
	}

	if s.coreNotificationClient != nil {
		go s.sendNotification(user.UUID, user.Email, user.Username)
	}

	// Generate JWT token
	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
		"user_uuid":   user.UUID,
		"tenant_id": user.TenantID,
		"role":      user.Role,
		"exp":       time.Now().Add(time.Hour * 24).Unix(),
	})

	tokenString, err := token.SignedString(jwtKey)
	if err != nil {
		return "", nil, errors.New("failed to generate token: " + err.Error())
	}

	return tokenString, user, nil
}

func (s *AuthService) sendNotification(userUUID, email, username string) {
	bgCtx := context.Background()
	if err := s.coreNotificationClient.NotifyUserCreated(bgCtx, userUUID, email, username); err != nil {
		log.Printf("Failed to call core notification service: %v", err)
	}
}
